change property actionInventory to Set and cascade to All